force-app/main/default/objects/SccIndustryRule__mdt/SccIndustryRule__mdt.object-meta.xml
<CustomObject>
    <description>可由管理员维护的 Salesforce 行业值与内部行业码映射。</description>
    <label>客户编码行业规则</label>
</CustomObject>