force-app/main/default/objects/SccIndustryRule__mdt/fields/IndustryCode__c.field-meta.xml
<CustomField>
    <fullName>IndustryCode__c</fullName>
    <label>四位行业码</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>