force-app/main/default/objects/SccIndustryRule__mdt/fields/SalesforceValue__c.field-meta.xml
<CustomField>
    <fullName>SalesforceValue__c</fullName>
    <label>Salesforce 行业值</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>